# Nemo

./: .dependency-cruiser.js  .eslintcache  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXPANDED_MIGRATION.md  LICENSE  MIGRATION.md  MODERNIZATION_PLAN.md  Nabu recovery program.md  PHASE_0_STATUS.md  README.md  deny.toml  electron-builder.yml  eslint.config.mjs  mise.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/: dependabot.yml
crates/nabu-core/: Cargo.toml  build.rs
crates/nabu-core/src/: export_engine.rs  graph.rs  indexer.rs  lib.rs  parser.rs  template_manager.rs  theme_manager.rs  vault.rs  vault_config.rs  view_state.rs  watcher.rs
crates/nabu-core/src/native/: audio.rs  ocr.rs  pdf.rs
crates/nabu-core/tests/: graph_tests.rs  parser_tests.rs
crates/nabu-ui/: Cargo.toml
crates/nabu-ui/src/: lib.rs
crates/nabu-ui/src/components/: dictation_pill.rs  file_tree.rs  graph_view.rs  mod.rs  note_editor.rs  pdf_viewer.rs  sandbox.rs  sandboxed_html.rs
crates/nabu-ui/src/components/editor/: mod.rs  slash_menu.rs
crates/nabu-ui/src/components/layout/: left_sidebar.rs  mod.rs  ribbon_bar.rs  right_inspector.rs  tab_bar.rs
crates/nabu-ui/src/components/settings/: mod.rs  settings_panel.rs
docs/: phase-6.1-feature-status-matrix.md  phase-6.1-repair-priority-report.md  phase-6.2-final-validation-report.md  phase-6.2-workflow-repair-prompt-a.md  phase-6.2-workflow-repair-prompt-b.md  phase-6.3-validation-report.md  phase-7.1-coverage-report.md  (+7 more)
(+370 files in other folders)
