[package]
name = "nabu-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.96"
pulldown-cmark = "0.13.4"
petgraph = "0.7.0"
notify = "8.0.0"
tantivy = "0.26.1"
uuid = "1.13.0"
walkdir = "2.5.0"
regex = "1.11.1"
