[package]
name = "nabu-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.7", features = ["csr"] }
serde = { version = "1.0.218", features = ["derive"] }
nabu-core = { path = "../nabu-core" }
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window"] }
wasm-bindgen = "0.2.100"
serde_json = "1.0.139"
